test/type_errors/cases/ppx_result_wrong_arity.ml
let x = [%eta.result "db.find"]
